--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
         "laravel-vite-plugin": "^1.0.0",
         "react": "^18.3.1",
         "react-dom": "^18.3.1",
+        "scss": "^0.2.4",
+        "typescript": "^5.4.5",
         "vite": "^5.0.0"
     },
     "dependencies": {
